<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textSize="46sp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_purple"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/editTextEmailRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_registration"
            android:layout_margin="8dp"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/editTextPasswordRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password_registration"
            android:layout_margin="8dp"
            android:autofillHints="password" />

        <EditText
            android:id="@+id/editTextNameRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_registration"
            android:layout_margin="8dp"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextLastNameRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/last_name_registration"
            android:layout_margin="8dp"
            android:autofillHints="name" />

        <EditText
            android:id="@+id/editTextAgeRegistration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/age_registration"
            android:layout_margin="8dp"
            android:autofillHints="number"/>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/sign_up_registration"
            />

    </LinearLayout>
    
</ScrollView>